# tally

./: README.md  alpha.ipynb  pyproject.toml  random-sampling.ipynb  requirements.txt  setup.py  tally-alpha.ipynb  tally-beta.ipynb  tally.py  test_tally.py
data/0/: 0.json  1.json  10.json  11.json  13.json  14.json  15.json  16.json  18.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/1/: 1.json  10.json  11.json  12.json  13.json  14.json  16.json  17.json  18.json  19.json  20.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
docs/: conf.py  index.rst
notebooks/: sampling.ipynb
tally/: __init__.py  composition.py  draw.py  functor.py  plot.py  version.py
tally.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: example.json  test_tally.py
